[package]
name = "bme280-embassy"
version = "0.1.0"
authors = ["Marcelo Correa <mvcorrea@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[features]
default = []
# Enable testing utilities
testing = ["iot-common/testing"]
# Enable IoT Container integration
container = ["async-trait"]

[dependencies]
# ESP32-C3 Hardware Abstraction Layer - from workspace
esp-hal = { workspace = true }
esp-hal-embassy = { workspace = true }
esp-rom-sys = { workspace = true }

# Embassy framework - from workspace
embassy-executor = { workspace = true }
embassy-time = { workspace = true }

# I2C Async Support - from workspace
embedded-hal-async = { workspace = true }

# Direct BME280 implementation using esp-hal (no external crates)

# Memory allocation - from workspace
esp-alloc = { workspace = true }

# Debugging - from workspace
rtt-target = { workspace = true }
panic-rtt-target = { workspace = true }

# Common utilities and error handling - from workspace
iot-common = { path = "../iot-common", default-features = false }

# Hardware abstraction layer - FIXED: Using direct esp-hal instead of broken iot-hal
# iot-hal = { path = "../iot-hal", default-features = false, features = ["esp32c3"] }

# IoT Container integration (optional) - DISABLED until HAL is fixed
# iot-container = { path = "../iot-container", default-features = false, optional = true }
async-trait = { version = "0.1", optional = true }

[dev-dependencies]
# Testing dependencies - enable std for testing on host
# No embedded dependencies for host testing


[[example]]
name = "basic_reading"
path = "examples/basic_reading.rs"

[[example]]
name = "full_system"
path = "examples/full_system.rs"