[package]
name = "esp32c3-modular-wifi"
version = "0.1.0"
authors = ["Marcelo Correa <mvcorrea@gmail.com>"]
edition = "2021"
description = "Modular WiFi toolkit with multiple implementation patterns for ESP32-C3"

[features]
default = ["blocking"]
blocking = ["dep:static_cell"]
embassy = ["dep:embassy-executor", "dep:embassy-net", "dep:embassy-time", "dep:static_cell", "dep:heapless", "dep:esp-hal-embassy"]
mqtt = ["dep:rust-mqtt"]
http = []

[dependencies]
# Core ESP32-C3 Hardware Abstraction Layer - Required for all features
esp-hal = { version = "1.0.0-rc.0", features = ["esp32c3", "unstable"] }
embedded-io = "0.6"
embedded-io-async = "0.6"

# WiFi Hardware and Network Stack - Required for all WiFi implementations
esp-wifi = { version = "0.15.0", features = ["esp32c3", "wifi", "smoltcp"] }
esp-alloc = { version = "0.8.0" }
smoltcp = { version = "0.12.0", default-features = false, features = ["medium-ethernet", "proto-dhcpv4", "proto-ipv4", "socket-dhcpv4", "socket-tcp", "socket-udp"] }

# Debugging and Panic Handling - Required for all features
rtt-target = "0.5"
panic-rtt-target = "0.1"

# Blocking WiFi Implementation Dependencies - Used by "blocking" feature
blocking-network-stack = { git = "https://github.com/bjoernQ/blocking-network-stack.git", rev = "b3ecefc222d8806edd221f266999ca339c52d34e", default-features = false, features = ["dhcpv4", "tcp"] }

# Embassy Async Implementation Dependencies - Used by "embassy" feature
embassy-executor = { version = "0.7", optional = true, features = ["task-arena-size-32768"] }
embassy-net = { version = "0.7", optional = true, features = ["tcp", "udp", "dhcpv4", "medium-ethernet"] }
embassy-time = { version = "0.4", optional = true }
static_cell = { version = "2.0", optional = true }
heapless = { version = "0.8", optional = true }
esp-hal-embassy = { version = "0.9.0", optional = true, features = ["esp32c3"] }

# MQTT Client Dependencies - Used by "mqtt" feature
rust-mqtt = { version = "0.3.0", optional = true, default-features = false }